# usvg-scenes

./: CMakeLists.txt  LICENSE  README.md  main.cpp  reader.hpp
scenes/curve_only/: test_curve.xml
scenes/mesh_backgrounds/: blue_sky.xml  mondrian.xml  orange_sky.xml  pink_sky.xml  sea.xml  snow_sky.xml  sunset.xml
scenes/unified/: bubble.xml  crane.xml  crane_ribbons.xml  drape.xml  ladybug.xml  pepper.xml  portal.xml  sunset.xml  sunset_illustration.xml
